// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Number Default 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        className="c6"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="1"
      />
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number Deprecated usage 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 300px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
  width="300px;"
>
  <label
    className="c1"
    hidden={true}
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        className="c6"
        id="insert-unique-id"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="0"
      />
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
  <div>
    <span
      className="c10"
    >
      <div
        className="c8"
      >
        Error: 
      </div>
      Number needs to be greater than 0
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Number Disabled 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #EBEBE8;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #EBEBE8;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        className="c6"
        disabled={true}
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step="0.25"
        type="text"
        value="152.25"
      />
      <button
        className="c7"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          0.25
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          0.25
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number Required 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label *
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        className="c6"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        required={true}
        step={1}
        type="text"
        value="91"
      />
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With a smaller step 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        className="c6"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step="0.005"
        type="text"
        value="15.200"
      />
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          0.005
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          0.005
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With all actions 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        className="c6"
        inputMode="decimal"
        min={0}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        step={1}
        type="text"
        value="1"
      />
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With auto focus 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        autoFocus={true}
        className="c6"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step="0.25"
        type="text"
        value="152.25"
      />
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          0.25
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          0.25
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With default value (Uncontrolled behaviour) 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        className="c6"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step="0.1"
        type="text"
        value="15.2"
      />
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          0.1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          0.1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With error if value is less than 1 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        aria-invalid={true}
        className="c6"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step="1"
        type="text"
        value="0"
      />
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
  <div>
    <span
      className="c10"
    >
      <div
        className="c8"
      >
        Error: 
      </div>
      Number needs to be greater than 0
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Number With extra info and error 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        aria-invalid={true}
        className="c6"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="0"
      />
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
  <div>
    <span
      className="c10"
    >
      <div
        className="c8"
      >
        Error: 
      </div>
      Number needs to be greater than 0
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Number With extra info below 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        className="c6"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="1"
      />
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
  <div>
    <span
      className="c10"
    >
      Use wisely this space
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Number With hidden label 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={true}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        className="c6"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="1"
      />
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With max and min 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        className="c6"
        inputMode="decimal"
        max="20"
        min="10"
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="12"
      />
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With no steppers 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        className="c6"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="1"
      />
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With size small 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:768px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Size = "s"
    </span>
  </div>,
  .c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c11 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c3 {
  width: 200px;
  display: inline-block;
}

.c7 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c10 {
  width: 32px;
  height: 32px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c10:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c10:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c10:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c10:active:enabled {
  background-color: #0046FF;
}

.c10:active:enabled svg {
  fill: #FFFFFF;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 32px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c9:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c9:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c13 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  height: 32px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c13:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c13:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Default
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
            htmlFor="insert-matching-unique-id"
          >
            <span
              className="c5"
            >
              Label 
            </span>
          </label>
          <span
            className="c6"
          >
            <div
              className="c7 c8"
            >
              <input
                className="c9"
                inputMode="decimal"
                min={0}
                onChange={[Function]}
                onKeyDown={[Function]}
                step={1}
                type="text"
                value="1"
              />
              <button
                className="c10"
                onClick={[Function]}
                size="s"
                type="button"
              >
                <div
                  className="c11"
                >
                  decrease number by 
                  1
                </div>
                <svg
                  aria-hidden="true"
                  className="c12"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  size={3}
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M24 11v2H0v-2z"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
              <button
                className="c10"
                onClick={[Function]}
                size="s"
                type="button"
              >
                <div
                  className="c11"
                >
                  increase number by 
                  1
                </div>
                <svg
                  aria-hidden="true"
                  className="c12"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  size={3}
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        No steppers
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
            htmlFor="insert-matching-unique-id"
          >
            <span
              className="c5"
            >
              Label 
            </span>
          </label>
          <span
            className="c6"
          >
            <div
              className="c7 c8"
            >
              <input
                className="c9"
                inputMode="decimal"
                min={0}
                onChange={[Function]}
                onKeyDown={[Function]}
                step={1}
                type="text"
                value="1"
              />
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Error
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
            htmlFor="insert-matching-unique-id"
          >
            <span
              className="c5"
            >
              Label 
            </span>
          </label>
          <span
            className="c6"
          >
            <div
              className="c7 c8"
            >
              <input
                aria-invalid={true}
                className="c13"
                inputMode="decimal"
                min={0}
                onChange={[Function]}
                onKeyDown={[Function]}
                step={1}
                type="text"
                value="1"
              />
              <button
                className="c10"
                onClick={[Function]}
                size="s"
                type="button"
              >
                <div
                  className="c11"
                >
                  decrease number by 
                  1
                </div>
                <svg
                  aria-hidden="true"
                  className="c12"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  size={3}
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M24 11v2H0v-2z"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
              <button
                className="c10"
                onClick={[Function]}
                size="s"
                type="button"
              >
                <div
                  className="c11"
                >
                  increase number by 
                  1
                </div>
                <svg
                  aria-hidden="true"
                  className="c12"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  size={3}
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </span>
          <div>
            <span
              className="c14"
            >
              <div
                className="c11"
              >
                Error: 
              </div>
              Some error text that will wrap itself over couple of lines
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules | Input / Number With success 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #00D200;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        className="c6"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        success={true}
        type="text"
        value="1"
      />
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With value (Controlled behaviour) 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c7 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c7:active:enabled {
  background-color: #0046FF;
}

.c7:active:enabled svg {
  fill: #FFFFFF;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 40px;
  width: 100%;
  padding: 8px;
  margin: 0 -1px;
  text-align: center;
  box-sizing: border-box;
  z-index: 1;
}

.c6:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c6:focus {
  border-color: #0046FF;
  z-index: 3;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-matching-unique-id"
  >
    <span
      className="c2"
    >
      Label 
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <input
        className="c6"
        inputMode="decimal"
        min={0}
        onChange={[Function]}
        onKeyDown={[Function]}
        step={1}
        type="text"
        value="10"
      />
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          decrease number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M24 11v2H0v-2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8"
        >
          increase number by 
          1
        </div>
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          size={3}
          viewBox="0 0 24 24"
        >
          <path
            d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </span>
  <button
    onClick={[Function]}
    type="button"
  >
    Decrease
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Increase
  </button>
</div>
`;
